# metabase-api-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_PROCESS.md  TEST_CHECKLIST.md  Taskfile.yml  deny.toml  docker-compose.yml
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
benches/: api_endpoint_benchmarks.rs  load_testing.rs  performance.rs
examples/: README.md  basic_usage.rs  crud_simple.rs  simple_example.rs  sql_query_simple.rs
scripts/: README.md  cleanup-docker.sh  setup-integration-env.sh  setup-integration-tests.sh
src/: lib.rs
src/api/: auth.rs  auth_adapter.rs  builder.rs  client.rs  client_with_repos.rs.bak  mod.rs
src/cache/: mod.rs
src/core/: auth.rs  error.rs  mod.rs
src/core/models/: card.rs  collection.rs  common.rs  dashboard.rs  database.rs  field.rs  mod.rs  parameter.rs  query.rs  user.rs
src/core/models/mbql/: aggregation.rs  builder.rs  field_ref.rs  filter.rs  mod.rs  query.rs
src/repository/: card.rs  collection.rs  dashboard.rs  database.rs  factory.rs  mod.rs  query.rs  traits.rs
src/service/: auth.rs  card.rs  collection.rs  dashboard.rs  database.rs  factory.rs  manager.rs  mod.rs  query.rs  traits.rs
src/transport/: auth_provider_impl.rs  auth_traits.rs  cache_provider_impl.rs  cache_traits.rs  http.rs  http_provider_impl.rs  http_provider_safe.rs  mod.rs  retry.rs  traits.rs
tests/: api_tests.rs  architecture_test.rs  auth_provider_unit_test.rs  cache_control_test.rs  card_operations_tests.rs  collection_operations_tests.rs  collection_service_migration_test.rs  dashboard_operations_tests.rs  e2e_tests.rs  extended_operations_tests.rs  integration_auth_tests.rs  integration_common.rs  integration_tests.rs  layered_architecture_test.rs  mbql_test.rs  query_operations_tests.rs  security.rs  simple_integration_test.rs  smoke_test.rs  sql_execution_test.rs  unit_tests.rs
tests/common/: mod.rs  test_helpers.rs
tests/fixtures/: sample_data.sql
tests/integration/: auth_tests.rs  card_tests.rs  collection_tests.rs  database_tests.rs  mod.rs  query_tests.rs  setup.rs  test_mbql_integration.rs
tests/security/: auth_security_tests.rs  http_security_tests.rs  mod.rs
tests/unit/: auth_provider_test.rs  cache_tests.rs  mod.rs  models_card_test.rs  models_collection_test.rs  models_common_test.rs  repository_unit_test.rs  trait_integration_test.rs  transport_traits_test.rs
tests/unit/api/: test_auth.rs  test_builder.rs  test_client.rs
tests/unit/transport/: cache_provider_unit_test.rs  mod.rs  test_http.rs  test_retry.rs
