[package]
name = "metabase-api-rs"
version = "0.1.0"
edition = "2021"
authors = ["daisuke8000 <daisuke12108000@gmail.com>"]
description = "A simplified Rust client for the Metabase API"
repository = "https://github.com/daisuke8000/metabase-api-rs"
license = "MIT"
readme = "README.md"
keywords = ["metabase", "api", "client", "analytics", "bi"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = []
cache = ["lru"]
performance = ["cache"]
query-builder = []
full = ["cache", "performance", "query-builder"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt", "time"] }
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Optional dependencies
lru = { version = "0.12", optional = true }

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
dotenvy = "0.15"

