[package]
name = "metabase-api-rs"
version = "0.1.0-beta.2"
edition = "2021"
authors = ["daisuke8000 <daisuke12108000@gmail.com>"]
description = "A simplified Rust client for the Metabase API (Beta release - feature complete)"
repository = "https://github.com/daisuke8000/metabase-api-rs"
homepage = "https://crates.io/crates/metabase-api-rs"
documentation = "https://docs.rs/metabase-api-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["metabase", "api", "client", "analytics", "bi"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = []
cache = ["lru"]
performance = ["cache"]
query-builder = []
full = ["cache", "performance", "query-builder"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Optional dependencies
lru = { version = "0.12", optional = true }

# Security dependencies
zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.8"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
dotenvy = "0.15"

[[example]]
name = "simple_example"
path = "examples/simple_example.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "crud_simple"
path = "examples/crud_simple.rs"

[[example]]
name = "sql_query_simple"
path = "examples/sql_query_simple.rs"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "api_endpoint_benchmarks"
harness = false

[[bench]]
name = "load_testing"
harness = false

